--- a/Weitianshi/pages/my/my/my.wxss
+++ b/Weitianshi/pages/my/my/my.wxss
@@ -224,7 +224,7 @@ page {
   line-height: 54rpx;
   text-align: right;
   margin-top: 29rpx;
-  margin-right:12rpx;
+  margin-right: 12rpx;
 }
 
 .blockContentAfter {
@@ -264,7 +264,7 @@ page {
   width: 136rpx;
   height: 54rpx;
   margin-top: 29rpx;
-  margin-right:12rpx;
+  margin-right: 12rpx;
   text-align: right;
 }
 
@@ -530,4 +530,19 @@ page {
   margin-top: 4rpx;
   color: #3378e0;
   text-align: left;
+}
+
+/*红包 样式  */
+
+.redBag {
+  background: #fd354c;
+  border-radius: 8px;
+  width: 343px;
+  height: 84px;
+  margin: 32rpx 0 0 32rpx;
+}
+
+.redBox {
+  font-size: 32rpx;
+  color: #f14b50;
 }
