--- a/Weitianshi/redPackets/resource/Template/Template.wxml
+++ b/Weitianshi/redPackets/resource/Template/Template.wxml
@@ -1,4 +1,18 @@
 <!--提示  -->
-<template name = 'error'>
+<template name='error'>
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+</template>
+
+<!--群红包  -->
+<template name="groupBox">
+  <view class="flex outsideBox">
+    <view class="groupPic"></view>
+    <view class="groupInfo">
+      <view class="groupName">这里是群的名称</view>
+      <view class="groupNum">已领
+        <label class="number">10</label>个红包，还有
+        <label class="number">3</label>个红包未领取 </view>
+    </view>
+  </view>
+  <view class="aline"></view>
 </template>
