--- a/Weitianshi/utils/wxml/netWork.wxml
+++ b/Weitianshi/utils/wxml/netWork.wxml
@@ -1,9 +1,13 @@
+<!--网络不给力  -->
 <view wx:if="{{!nonet}}">
-<scroll-view scroll-y style="height:1108rpx;">
-  <view style="position:relative">
-    <image class="N-netWorkImg" src="/img/img-duanwang.png"></image>
-    <view class="N-text">网络不给力</view>
-    <view class="N-refresh" bindtap='refresh'>刷新试试</view>
-  </view>
-</scroll-view>
+  <scroll-view scroll-y style="height:1108rpx;">
+    <view style="position:relative">
+      <image class="N-netWorkImg" src="/img/img-duanwang.png"></image>
+      <view class="N-text">网络不给力</view>
+      <view class="N-refresh" bindtap='refresh'>刷新试试</view>
+    </view>
+  </scroll-view>
 </view>
+
+<!--错误提示  -->
+<view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
