--- a/Weitianshi/redPackets/pages/openHB/openHB.wxml
+++ b/Weitianshi/redPackets/pages/openHB/openHB.wxml
@@ -1,2 +1,11 @@
-<!--pages/openHB/openHB.wxml-->
-<text>pages/openHB/openHB.wxml</text>
+<import src="/redPackets/resource/Template/Template.wxml" />
+<!--错误提示  -->
+<view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+<scroll-view scroll-y style="height:1200rpx;">
+  <template is="openHB" data="{{bg_hongbao2:bg_hongbao2,kaiStyle:kai}}"></template>
+  <form report-submit='true' bindsubmit='formsubmit'>
+    <button form-type='submit'>
+     <image class="openZhuan" src="{{zhuanfa}}"></image>
+    </button>
+  </form>
+</scroll-view>
