--- a/Weitianshi/redPackets/pages/openHB/openHB.wxss
+++ b/Weitianshi/redPackets/pages/openHB/openHB.wxss
@@ -1,1 +1,9 @@
 /* pages/openHB/openHB.wxss */
+.openZhuan{
+  width: 636rpx;
+  height: 118rpx;
+  position: fixed;
+  left: 8%;
+  bottom: 50rpx;
+
+}
