--- a/Weitianshi/redPackets/pages/myHB/myHB.wxss
+++ b/Weitianshi/redPackets/pages/myHB/myHB.wxss
@@ -1,13 +1,13 @@
 page {
   background: #f14b50;
   width: 100%;
-  height: 100%;
-  margin: 48rpx 32rpx 0 32rpx;
+  height: 95%;
 }
 
 .outBox {
   background: #ffefe9;
   width: 688rpx;
+  margin: 48rpx 32rpx 0 32rpx;
 }
 
 .whoGet {
@@ -46,4 +46,16 @@ page {
 .getPerson {
   font-size: 24rpx;
   color: #f7c660;
+}
+
+.noHB {
+  width: 514rpx;
+  height: 290rpx;
+  margin: 392rpx 118rpx;
+}
+
+.btn1 {
+  width: 626rpx;
+  height: 118rpx;
+  left: 52rpx;
 }
