--- a/Weitianshi/redPackets/pages/publishHB/publishHB.wxss
+++ b/Weitianshi/redPackets/pages/publishHB/publishHB.wxss
@@ -1,1 +1,91 @@
-/* pages/publishHB/publishHB.wxss */
+.imgBg {
+  height: 920rpx;
+  width: 750rpx;
+  z-index: 1;
+}
+
+.redInfo {
+  position: absolute;
+  top: 382rpx;
+  left: 96rpx;
+}
+
+.bagTitle {
+  font-size: 28rpx;
+  color: #f7c660;
+  margin-bottom: 16rpx;
+  display: inline-block;
+}
+
+.redBagMoney, .redBagNum, .bagName {
+  background: #fff;
+  border-radius: 8rpx;
+  height: 104rpx;
+  font-size: 28rpx;
+  color: #ccc;
+}
+
+.bagName {
+  width: 534rpx;
+  padding-left: 24rpx;
+  margin-bottom: 16rpx;
+}
+
+.redBagMoney {
+  padding-left: 44rpx;
+  width: 204rpx;
+  margin-right: 62rpx;
+}
+
+.redBagNum {
+  padding-right: 24rpx;
+  text-align: right;
+  width: 224rpx;
+}
+
+.bagLeft, .bagRight {
+  margin-bottom: 20rpx;
+}
+
+.point {
+  font-family: PingFangSC-Regular;
+  font-size: 20rpx;
+  color: #f7c660;
+  text-align: center;
+  line-height: 28rpx;
+  width: 560rpx;
+  word-wrap: break-word;
+}
+
+/*信息  */
+
+.rgInfo {
+  background: #fef4db;
+  width: 608rpx;
+  height: 88rpx;
+  justify-content: space-between;
+  padding: 40rpx 78rpx 40rpx 66rpx;
+}
+
+.rgInfoNum {
+  font-size: 36rpx;
+  color: #333;
+}
+
+.rgInfoTitle {
+  font-size: 24rpx;
+  color: #999;
+  margin-bottom: 4rpx;
+}
+
+.left, .right, .center {
+  text-align: center;
+}
+
+/*按钮  */
+
+.btn1 {
+  width: 626rpx;
+  height: 118rpx;
+  left: 52rpx;
+}
