1-30-霍春阳-下午
制作页面
调节接口

--- a/Weitianshi/redPackets/pages/crowdDetail/crowdDetail.wxml
+++ b/Weitianshi/redPackets/pages/crowdDetail/crowdDetail.wxml
@@ -1,2 +1,3 @@
-<!--pages/morHB/moreHB.wxml-->
-<text>pages/morHB/moreHB.wxml</text>
+<view class="groupName"></view>
+<view class="HBPerson"></view>
+<image src='{{imgUrls}}' class='noHB'></image>
