--- a/Weitianshi/redPackets/pages/myHB/myHB.wxml
+++ b/Weitianshi/redPackets/pages/myHB/myHB.wxml
@@ -1,18 +1,23 @@
-<view class='outBox' wx:if="{{redHB}}">
-  <view class="whoGet">
-    <view class="flex upBox">
-      <view class="des">红包的描述,最多款多160.很长怎么办呢的艰苦奋斗了</view>
-      <view class="getTime">2019-01-01</view>
-    </view>
-    <view class='flex downBox'>
-      <view class="getNum">￥100.00*4个</view>
-      <view class="getPerson">3人领取</view>
+<block wx:for="{{HBInfo}}" wx:key="{{index}}">
+  <view class='outBox' wx:if="{{HBInfo.length != 0}}" data-uniqueId="{{item.unique_id}}">
+    <view class="whoGet">
+      <view class="flex upBox">
+        <view class="des">{{item.title}}</view>
+        <view class="getTime">{{item.created_At}}</view>
+      </view>
+      <view class='flex downBox'>
+        <view class="getNum">￥
+          <label>{{item.money}}</label> *
+          <label>{{item.number}}</label> 个</view>
+        <view class="getPerson">
+          <label>{{item.drawed_num}}</label> 人领取</view>
+      </view>
     </view>
   </view>
-</view>
-<image src='{{imgUrls}}' wx:if="{{!redHB}}" class='noHB'></image>
+</block>
+<image src='{{imgUrls}}' wx:if="{{HBInfo.length == 0}}" class='noHB'></image>
 <form report-submit='true' bindsubmit='formSubmit'>
-  <button form-type='submit' bindtap='createRedBag'>
+  <button form-type='submit' bindtap='createHB'>
     <image src="{{imgUrls2}}" class="btn1 floatBtn"></image>
   </button>
 </form>
