--- a/Weitianshi/redPackets/pages/crowdDetail/crowdDetail.wxss
+++ b/Weitianshi/redPackets/pages/crowdDetail/crowdDetail.wxss
@@ -1,1 +1,18 @@
 /* pages/morHB/moreHB.wxss */
+
+.crowText {
+  font-size: 26rpx;
+  color: #333;
+  width: 91%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 32rpx;
+}
+.packetover{
+  position: relative;
+  width: 514rpx;
+  height: 290rpx;
+  left: 14%;
+  top: 300rpx;
+}
