--- a/Weitianshi/redPackets/pages/openHB/openHB.wxml
+++ b/Weitianshi/redPackets/pages/openHB/openHB.wxml
@@ -2,7 +2,7 @@
 <!--错误提示  -->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <scroll-view scroll-y style="height:1200rpx;">
-  <view wx:if="{{show}}">
+  <view>
     <template is="openHB" data="{{bg_hongbao2:bg_hongbao2,kaiStyle:kai}}"></template>
     <form report-submit='true' bindsubmit='formsubmit'>
       <button form-type='submit'>
@@ -13,6 +13,7 @@
   <view class="modalBox" wx:if="{{!show}}">
     <image class="tankuang" src="{{tankuang}}"></image>
     <view class="getMoney">￥105.11</view>
+    <view class="addPerson">添加<label>xxx</label>的投资名片</view>
     <form report-submit='true' bindsubmit='makeSure'>
       <button form-type='submit'>
         <image class="btnSure" src="{{queding}}"></image>
