--- a/Weitianshi/redPackets/pages/openHB/openHB.wxss
+++ b/Weitianshi/redPackets/pages/openHB/openHB.wxss
@@ -15,6 +15,7 @@
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 999;
 }
 
 .tankuang {
@@ -26,7 +27,6 @@
 .btnSure {
   height: 108rpx;
   width: 532rpx;
-  /* margin-left: 110rpx; */
 }
 
 .getMoney {
@@ -36,4 +36,13 @@
   position: absolute;
   top: 470rpx;
   left: 238rpx;
+}
+
+.addPerson {
+  font-size: 24rpx;
+  color: #f14b50;
+  text-align: center;
+  position: absolute;
+  top: 772rpx;
+  left: 254rpx;
 }
