--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1479,6 +1479,7 @@
     </block>
   </view>
 </template>
+
 <!--网络状态  -->
 <!-- <template name="network">
   <scroll-view scroll-y style="height:1108rpx;">
@@ -1489,3 +1490,26 @@
     </view>
   </scroll-view>
 </template> -->
+
+<!--开红包  -->
+<template name="openHB">
+  <view id="openHB">
+    <image src="{{bg_hongbao2}}" class="openHB">
+      <view class="openTitle">这里是他写的标题字数可能会有点长但他写的标题字数可能会字数</view>
+      <image src="" class="openImg"></image>
+      <image src="/img/img-rzchuangyezhe@2x.png" class="openRen"></image>
+      <view class="openName">张三丰</view>
+      <view class="openCareer">
+        <label>投资经理</label>
+        <label> · 杭州投着乐杭州投着乐网络科技有限公司</label>
+      </view>
+      <form report-submit='true' bindsubmit='formsubmit'>
+        <button form-type='submit'>
+          <image src="../../img/kai.png" class="{{kaiStyle == true ?'openKai':'openKai1'}}" bindtap='kai'></image>
+        </button>
+      </form>
+      <view class="opentishi">每个用户可领取一次红包，金额将直接存入微信零钱包 本红包仅限发布者自己转发才可领取
+      </view>
+    </image>
+  </view>
+</template>
